Add LICENSE and CODE_OF_CONDUCT

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,7 @@ repo_name: 'MaxHalford/xgp'
 repo_url: 'https://github.com/MaxHalford/xgp'
 
 # Copyright
-copyright: 'Copyright &copy; Max Halford 2017'
+copyright: 'Copyright &copy; 2017 Max Halford'
 
 # Theme
 theme: 'material'
