--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,14 @@
-language: python
-install:
-  - pip install mkdocs mkdocs-material
-script:
-  - mkdocs build --verbose --clean --strict
-deploy:
-  provider: pages
-  skip_cleanup: true
-  github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
-  local_dir: site
-  on:
-    branch: master
+matrix:
+  include:
+    language: python
+    install:
+      - pip install mkdocs mkdocs-material
+    script:
+      - mkdocs build --verbose --clean --strict
+    deploy:
+      provider: pages
+      skip_cleanup: true
+      github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
+      local_dir: site
+      on:
+        branch: master
