--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,23 @@
-matrix:
-  include:
-    language: python
-    cache: pip
-    install:
-      - pip install mkdocs mkdocs-material
-    script:
-      - mkdocs build --verbose --clean --strict
-    deploy:
-      provider: pages
-      skip_cleanup: true
-      github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
-      local_dir: site
-      on:
-        branch: master
+language: go
+sudo: false
+go:
+  - tip
+before_install:
+  - go get github.com/mattn/goveralls
+script:
+  - go test -race -v -cover -coverprofile=coverage.out
+  - $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci
+after_script:
+  - apt-get install python
+  - pip install mkdocs mkdocs-material
+  - mkdocs build --verbose --clean --strict
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
+  local_dir: site
+  on:
+    branch: master
+branches:
+  only:
+    - master
