Fix travis path and add mse metric

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ env:
     - TASK=test_python_3
 
 install:
-  - source tests/travis/setup.sh
+  - source .travis/setup.sh
 
 script:
   - .travis/test.sh
