--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ jobs:
     - script: .travis/tests/core.sh
     - script: .travis/tests/python3.sh
     - stage: Documentation
-      script: sudo ./travis/make_documentation.sh
+      script: .travis/make_documentation.sh
       deploy:
         provider: pages
         api_key: $GITHUB_TOKEN
