Fix travis docs

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,6 @@ jobs:
         provider: pages
         github_token: $GITHUB_TOKEN
         skip_cleanup: true
+        local_dir: site
         on:
           branch: master
