Add execution rights to test scripts in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,9 @@ cache:
     - ${HOME}/.cache/usr
     - ${HOME}/.cache/pip
 
+before_install:
+  - chmod +x .travis/tests/*.sh
+
 jobs:
   include:
     - stage: Core
