Remove Task and DRS in Program

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 # Project information
-site_name: xgp
+site_name: XGP
 site_description: 'Genetic programming tool for classification and regression'
 site_author: 'Max Halford'
 site_url: 'https://maxhalford.github.io/xgp'
