--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,5 @@
 language: go
 
-go:
-  - "1.9"
-  - "1.10"
-  - tip
-
 sudo: required
 
 os:
@@ -23,8 +18,16 @@ jobs:
   include:
     - stage: Core
       script: .travis/tests/core.sh
+      go: "1.9"
+    - stage: Core
+      script: .travis/tests/core.sh
+      go: "1.10"
     - stage: CLI
       script: .travis/tests/cli.sh
+      go: "1.9"
+    - stage: CLI
+      script: .travis/tests/cli.sh
+      go: "1.10"
     - stage: Documentation
       script: .travis/make_documentation.sh
       deploy:
