--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,8 +32,8 @@ nav:
   - Introduction: index.md
   - How it works: how-it-works.md
   - Command-line interface (CLI): cli.md
-  - Go API: go.md
-  - Python API: python.md
+  - Go usage: go.md
+  - Python usage: python.md
   - Training parameters: training-parameters.md
 
 # Extensions
